--- a/index.html
+++ b/index.html
@@ -41,31 +41,31 @@
         <section id="top-picks" class="section">
             <h2>Top Picks</h2>
             <div class="img-container">
-                <img src="./assets//img/burger-1.svg" alt="burger 1">
+                <img src="./assets/img/burger-1.svg" alt="burger 1">
             </div>
         </section>
         <section id="whopper" class="section">
             <h2>Whopper</h2>
             <div class="img-container">
-                <img src="./assets//img/burger-2.svg" alt="burger 2">
+                <img src="./assets/img/burger-2.svg" alt="burger 2">
             </div>
         </section>
         <section id="stunner-menu" class="section">
             <h2>Stunner Menu</h2>
             <div class="img-container">
-                <img src="./assets//img/burger-3.svg" alt="burger 3">
+                <img src="./assets/img/burger-3.svg" alt="burger 3">
             </div>
         </section>
         <section id="new-foodie-collection" class="section">
             <h2>New Foodie Collection</h2>
             <div class="img-container">
-                <img src="./assets//img/burger-4.svg" alt="burger 4">
+                <img src="./assets/img/burger-4.svg" alt="burger 4">
             </div>
         </section>
         <section id="deal-of-the-day" class="section">
             <h2>Deal of the Day</h2>
             <div class="img-container">
-                <img src="./assets//img/burger-5.svg" alt="burger 5">
+                <img src="./assets/img/burger-5.svg" alt="burger 5">
             </div>
         </section>
     </main>
